--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 ---
 layout: workshop
 root: .
-venue: Room XXX       # brief name of host site without address (e.g., "Euphoric State University")
-address: FIXME    # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
-country: FIXME    # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
-language: FIXME   # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: FIXME     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
-humandate: FIXME  # human-readable date (e.g., "Feb 17-18, 2020")
-humantime: FIXME  # human-readable time (e.g., "9:00 am - 4:30 pm")
-startdate: FIXME  # use YYYY-MM-DD format like "2015-01-01"
-enddate: FIXME    # use YYYY-MM-DD format like" 2015-01-02"
-instructor: Selene Fernandez # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: FIXME     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: FIXME    # contact email address for workshop organizer, such as "grace@hopper.org"
+venue: Manzana Room      # brief name of host site without address (e.g., "Euphoric State University")
+address: Fruit Building    # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
+country: Narnia    # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
+language: Esperanto   # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
+latlng: 20.6843373,-88.5679147  # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
+humandate: Feb 30-31, 2100  # human-readable date (e.g., "Feb 17-18, 2020")
+humantime: 13:00 am - 26:00 pm  # human-readable time (e.g., "9:00 am - 4:30 pm")
+startdate: 2100-02-30 # use YYYY-MM-DD format like "2015-01-01"
+enddate: 2100-02-31    # use YYYY-MM-DD format like" 2015-01-02"
+instructor: Selene Fernandez, Joanna Diong # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: Gnomes     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+contact: sc@narnia.com   # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad:         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
