--- a/index.html
+++ b/index.html
@@ -641,8 +641,8 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   </div>
 </div> <!-- End of 'R' section. -->
 
-<!-- 
 <div id="sql"> <!-- Start of 'SQLite' section. -->
+    <!--
   <h3>SQLite</h3>
 
   <p>
@@ -677,8 +677,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   <p><strong>If you installed Anaconda, it also has a copy of SQLite
     <a href="https://github.com/ContinuumIO/anaconda-issues/issues/307">without support to <code>readline</code></a>.
     Instructors will provide a workaround for it if needed.</strong></p>
-</div> <!-- End of 'SQLite' section. -->
--->
+</div>  --> <!-- End of 'SQLite' section. -->
 
 
 <!--
